# curriculum-curator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  session-ses_51c1.md  setup.sh
backend/: .gitignore  BACKEND_STATUS.md  add_research_tables.py  create_admin.py  init_db.py  pyproject.toml  test_research_sources.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: accreditation.py  admin.py  admin_config.py  ai.py  auth.py  content.py  content_export.py  content_versions.py  import_content.py  learning_outcomes.py  llm.py  llm_config.py  materials.py  monitoring.py  research_sources.py  units.py  web_search.py
backend/app/core/: config.py  database.py  password_validator.py  rate_limiter.py  security_middleware.py  security_utils.py  startup_checks.py
backend/app/models/: __init__.py  accreditation_mappings.py  assessment.py  assessment_plan.py  chat.py  chat_session.py  common.py  content.py  content_quarto_settings.py  content_version.py  email_verification.py  email_whitelist.py  generation_history.py  learning_outcome.py  llm_config.py  local_learning_outcome.py  login_attempt.py  lrd.py  mappings.py  material.py  password_reset.py  prompt_template.py  quarto_preset.py  quiz_question.py  research_source.py  security_log.py  system_config.py  system_settings.py  task_list.py  unit.py  unit_outline.py  user.py  validation_result.py  weekly_material.py  weekly_topic.py
backend/app/plugins/: basic_remediator.py  url_verifier.py
backend/app/repositories/: __init__.py  content_repo.py  security_repo.py  unit_repo.py  user_repo.py
backend/app/schemas/: __init__.py  accreditation.py  assessments.py  auth.py  content.py  llm.py  llm_generation.py  quarto.py  research_source.py  unit.py  user.py
backend/app/services/: advanced_llm_service.py  analytics_service.py  assessments_service.py  citation_service.py  content_workflow_service.py  email_service.py  file_import_service.py  git_content_service.py  llm_service.py  materials_service.py  pdf_parser_service.py  quarto_service.py  web_search_service.py  workflow_structure_creator.py
backend/app/utils/: auth_helpers.py
backend/migrations/versions/: add_accreditation_mappings.py  add_quarto_tables.py  add_sdg_mappings.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_import_endpoints.py  test_llm_service.py  test_services_unit.py
docs/: COMPREHENSIVE-UX-FIX-PLAN.md  README.md  UX-ANALYSIS-AND-FIX-PLAN.md
docs/adr/: 0002-fasthtml-web-framework.md  0006-pure-fasthtml-no-javascript.md  0012-framework-migration-fasthtml-to-nicegui.md  0014-litellm-unified-llm-abstraction.md  0015-content-format-and-export-strategy.md  0016-react-typescript-frontend.md  0017-fastapi-rest-backend.md  0018-workflow-flexibility-philosophy.md  0019-database-abstraction-sqlalchemy.md  0020-ai-optional-user-empowerment.md  0021-web-search-citation-integration.md  0022-content-type-system-evolution.md  0023-file-import-processing-architecture.md  index.md
docs/archive/: COURSE_TO_UNIT_RENAMING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  NICEGUI_MIGRATION_PLAN.md  TAURI_CONCEPTS_EXTRACTION.md  UI_UX_REDESIGN.md  UNIT_MODEL_MIGRATION.md  implementation-plan-unit-structure.md  tasks-unit-structure-implementation.md
docs/guides/: docker-vps-deployment.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx
frontend/src/components/Layout/: AppLayout.tsx  Dashboard.tsx
frontend/src/components/Research/: ResearchPanel.tsx
frontend/src/components/Search/: SearchPanel.tsx
frontend/src/components/UnitStructure/: AoLMappingPanel.tsx  CoursePlanner.tsx  GraduateCapabilitiesPanel.tsx  LearningOutcomeMap.tsx  SDGMappingPanel.tsx  UnitStructureDashboard.tsx  WeekAccordion.tsx  WeeklyMaterialsManager.tsx
frontend/src/components/onboarding/: TeachingStyleOnboarding.tsx
frontend/src/components/ui/: Alert.tsx  Button.tsx  EmptyState.tsx  FormInput.tsx  LoadingSpinner.tsx  Modal.tsx  index.ts
frontend/src/constants/: aolCompetencies.ts  graduateCapabilities.ts  sdgGoals.ts
frontend/src/features/admin/: AdminDashboard.tsx  EmailWhitelist.tsx  UserManagement.tsx
frontend/src/features/ai/: AIAssistant.tsx
frontend/src/features/auth/: EmailVerificationForm.tsx  Login.tsx  PasswordResetFlow.tsx  RegistrationModal.tsx
frontend/src/features/content/: ContentCreator.tsx  ContentView.tsx
frontend/src/features/import/: ImportMaterials.tsx
frontend/src/features/landing/: Landing.tsx
frontend/src/features/materials/: MaterialDetail.tsx
frontend/src/features/settings/: Settings.tsx  TeachingStyleSettings.tsx
frontend/src/features/units/: UnitDashboard.tsx  UnitManager.tsx  UnitStructure.tsx  UnitView.tsx  UnitWorkflow.tsx
frontend/src/hooks/: index.ts  useApi.ts  useAsyncAction.ts  useForm.ts  useModal.ts
frontend/src/pages/: DashboardPage.tsx  UnitPage.tsx
frontend/src/services/: api.ts  llmApi.ts  searchApi.ts  sourcesApi.ts  unitStructureApi.ts  workflowApi.ts
frontend/src/stores/: authStore.ts  teachingStyleStore.ts  unitsStore.ts
frontend/src/types/: index.ts  unitStructure.ts
scripts/: check_field_mismatches.py  fix_camelcase_to_snake.py  fix_frontend_fields.py  tech_debt.sh  technical_debt_report.py  test_all_endpoints.py  test_create_unit_direct.sh  test_unit_creation.py
tasks/: content-curation-implementation-plan.md  mvp-content-creation-flow.md  phase-1-single-material-creation.md
